JAVA-FX_ Challenge-Self

--- a/JAVA/CL_Application/src/sample/main.fxml
+++ b/JAVA/CL_Application/src/sample/main.fxml
@@ -18,7 +18,8 @@
             <MenuBar>
                 <Menu text="Contacts">
                     <MenuItem text="Add New" onAction="#showAddContactDialog"/>
-                    <MenuItem text="Open"/>
+                    <MenuItem text="Edit" onAction="#showEditContactDialog"/>
+                    <MenuItem text="Delete" onAction="#deleteContact"/>
                     <MenuItem text="Exit"/>
                 </Menu>
             </MenuBar>
