--- a/JAVA/CL_Application/src/sample/main.fxml
+++ b/JAVA/CL_Application/src/sample/main.fxml
@@ -27,23 +27,26 @@
     </top>
     <center>
         <TableView id="table-view" fx:id="contactsTable">
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
            <columns>
-               <TableColumn id="column" text="First Name" prefWidth="150">
+               <TableColumn id="column" text="First Name">
                    <cellValueFactory>
                        <PropertyValueFactory property="firstName" />
                    </cellValueFactory>
                </TableColumn>
-               <TableColumn  id="column" text="Last Name" prefWidth="150">
+               <TableColumn  id="column" text="Last Name">
                    <cellValueFactory>
                        <PropertyValueFactory property="lastName" />
                    </cellValueFactory>
                </TableColumn>
-               <TableColumn id="column" text="Phone Number" prefWidth="150">
+               <TableColumn id="column" text="Phone Number">
                    <cellValueFactory>
                        <PropertyValueFactory property="phoneNumber" />
                    </cellValueFactory>
                </TableColumn>
-               <TableColumn id="column" text="Notes" prefWidth="250">
+               <TableColumn id="column" text="Notes">
                    <cellValueFactory>
                        <PropertyValueFactory property="notes" />
                    </cellValueFactory>
