--- a/JAVA/DB_JavaFx/src/sample/main.fxml
+++ b/JAVA/DB_JavaFx/src/sample/main.fxml
@@ -7,12 +7,17 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
             fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <TableView fx:id="artistTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn prefWidth="${artistTable.width}" text="Name" />
+                <TableColumn prefWidth="${artistTable.width}" text="Name">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="name"/>
+                    </cellValueFactory>
+                </TableColumn>
             </columns>
             <BorderPane.margin>
                 <Insets right="10.0" />
