--- a/JAVA/DB_JavaFx/src/sample/main.fxml
+++ b/JAVA/DB_JavaFx/src/sample/main.fxml
@@ -1,13 +1,9 @@
-<?import javafx.geometry.Insets?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
             fx:controller="sample.Controller" xmlns:fx="http://javafx.com/fxml/1">
     <center>
@@ -39,7 +35,7 @@
     <bottom>
         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <children>
-                <ProgressBar prefWidth="200.0" progress="0.0" visible="false">
+                <ProgressBar visible="false" prefWidth="200.0" progress="0.0">
                     <HBox.margin>
                         <Insets left="50.0" />
                     </HBox.margin>
