--- a/NODE_JS/node_farm/starter/templates/template_card.html
+++ b/NODE_JS/node_farm/starter/templates/template_card.html
@@ -1,25 +1,25 @@
 <figure class="card">
-    <div class="card__emoji">{%Image%}{%Image%}</div>
+    <div class="card__emoji">{% Image %}{% Image %}</div>
 
     <div class="card__title-box">
-      <h2 class="card__title">{%ProductName%}</h2>
+      <h2 class="card__title">{% ProductName %}</h2>
     </div>
 
     <div class="card__details">
-      <div class="card__detail-box">
-        <h6 class="card__detail card__detail--organic {%NotOrganic%}">Organic!</h6>
+      <div class="card__detail-box {% NotOrganic %}">
+        <h6 class="card__detail card__detail--organic ">Organic!</h6>
       </div>
 
       <div class="card__detail-box">
-        <h6 class="card__detail">{%Quantity%} per 📦</h6>
+        <h6 class="card__detail">{% Quantity %} per 📦</h6>
       </div>
 
       <div class="card__detail-box">
-        <h6 class="card__detail card__detail--price">{%Price%}</h6>
+        <h6 class="card__detail card__detail--price">{% Price %}€</h6>
       </div>
     </div>
 
-    <a class="card__link" href="/product?id={%id%}">
+    <a class="card__link" href="/product?id={% id %}">
       <span>Detail <i class="emoji-right">👉</i></span>
     </a>
   </figure>
