--- a/NODE_JS/node_farm/starter/templates/template_product.html
+++ b/NODE_JS/node_farm/starter/templates/template_product.html
@@ -13,7 +13,7 @@
 			href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/ear-of-maize_1f33d.png"
 		/>
 
-		<title>{% ProductName%} {% Image %} /// NODE FARM</title>
+		<title>{% ProductName %} {% Image %} /// NODE FARM</title>
 
 		<style>
 			*,
@@ -275,7 +275,7 @@
 
 			<figure class="product">
 				<div class="product__organic {% NotOrganic %}"><h5>Organic</h5></div>
-				<a href="#" class="product__back">
+				<a href="/overview" class="product__back">
 					<span class="emoji-left">👈</span>Back
 				</a>
 				<div class="product__hero">
