Working with PUG base.pug

--- a/NODE_JS/natours/starter/views/base.pug
+++ b/NODE_JS/natours/starter/views/base.pug
@@ -6,7 +6,7 @@ html
         link(rel='stylesheet' href='css/style.css') 
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
         link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
-        title Natours | Exciting tours for adventurous people 
+        title Natours | #{title}
 
 
     body
@@ -15,8 +15,8 @@ html
   
 
         // CONTENT
-        main.main 
-            h1= tour
+        block content 
+            h1 This is a placeholder heading 
 
         
         // FOOTER 
