Working with PUG base.pug

--- a/NODE_JS/natours/starter/public/css/style.css
+++ b/NODE_JS/natours/starter/public/css/style.css
@@ -337,12 +337,7 @@ body {
 .section-header {
   position: relative;
   height: 38vw;
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% calc(100% - var(--section-rotate)),
-    0 100%
-  );
+  clip-path: polygon(0 0, 100% 0, 100% calc(100% - var(--section-rotate)), 0 100%);
   -webkit-clip-path: polygon(
     0 0,
     100% 0,
