--- a/NODE_JS/natours/starter/views/emails/passwordReset.pug
+++ b/NODE_JS/natours/starter/views/emails/passwordReset.pug
@@ -2,8 +2,8 @@ extends baseEmail
 
 block content 
     p Hi #{firstName},
-        p Welcome to Natours, we're glad to have you 🎉🙏
-        p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+        p Forgot a password: Submit a PATCH request with your new password and passwordConfirm to: #{url}.
+        p (Website for this action is not yet implemented)
         table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
             tbody
                 tr
@@ -12,8 +12,7 @@ block content
                             tbody
                                 tr
                                     td
-                                        a(href=`${url}`, target='_blank') Upload user photo
-        p If you need any help with booking your next tour, please don't hesitate to contact us!
-        p - Debra van Klienwee, CEO
+                                        a(href=`${url}`, target='_blank') Reset Your Password
+        p If you did not forget your password, please ignore this email
 
 
